--- a/administrator/templates/atum/scss/blocks/_toolbar.scss
+++ b/administrator/templates/atum/scss/blocks/_toolbar.scss
@@ -1,13 +1,13 @@
 joomla-toolbar-button {
-  border: 0 solid var(--border);
+  border: 1px solid var(--border);
 
   [class^='icon-'],
   [class*=' icon-'] {
     margin-right: .5rem;
 
     [dir=rtl] & {
-      margin-right: 0;
       margin-left: .5em;
+      margin-right: 0;
     }
   }
 }
@@ -24,10 +24,8 @@ joomla-toolbar-button {
   z-index: $zindex-toolbar;
   width: auto;
   min-height: 43px;
-  padding: 15px 0;
+  padding: 13px 0;
   color: var(--atum-text-dark); //#0c192e;
-  background: var(--toolbar-bg);
-  box-shadow: -3px -2px 22px #ddd;
 
   .row {
     margin-right: 0;
@@ -52,16 +50,14 @@ joomla-toolbar-button {
   }
 
   .btn {
+    background: $white;
+    border-color: $gray-500;
+    color: var(--atum-text-dark);
     padding: $input-btn-padding-y-sm-submenu $input-btn-padding-x-sm-submenu;
     font-size: 1rem;
     line-height: $atum-toolbar-line-height;
-    color: var(--atum-text-dark);
-    background: $white;
-    border-color: $gray-500;
-    border-radius: $border-radius;
-    box-shadow: 0 0 0 .1rem lighten(theme-color("atum-link-color"), 45%);
-    box-shadow: none;
-
+    box-shadow: $atum-box-shadow;
+    border: 0;
 
     [class^='icon-'],
     [class*=' icon-'],
@@ -73,8 +69,7 @@ joomla-toolbar-button {
       height: 100%;
       margin: $input-btn-padding-y-sm-submenu $input-btn-submenu-icon-distance $input-btn-padding-y-sm-submenu -#{$input-btn-padding-x-sm-submenu};
       line-height: $atum-toolbar-line-height;
-      color: var(--atum-text-dark);
-
+      color: var(--white);
     }
 
     &.btn-success {
@@ -86,7 +81,8 @@ joomla-toolbar-button {
       [class^='#{$fa-css-prefix}-'],
       [class*=' #{$fa-css-prefix}-'],
       span {
-        color: darken(theme-color("success"), 5%);
+        background-color: darken(theme-color("success"), 5%);
+        color: rgba(255, 255, 255, 0.90);
       }
 
       &:hover,
@@ -98,11 +94,11 @@ joomla-toolbar-button {
         [class^='#{$fa-css-prefix}-'],
         [class*=' #{$fa-css-prefix}-'],
         span {
-          color: rgba(255, 255, 255, .90);
-          background: darken(theme-color("success"), 10%);
+          background-color: darken(theme-color("success"), 10%);
+          color: rgba(255, 255, 255, 0.90);
         }
 
-        color: rgba(255, 255, 255, .90);
+        color:rgba(255, 255, 255, 0.90);
         background-color: theme-color("success");
       }
     }
@@ -110,12 +106,14 @@ joomla-toolbar-button {
     &.btn-danger {
 
       background-color: $white;
+
       [class^='icon-'],
       [class*=' icon-'],
       [class^='#{$fa-css-prefix}-'],
       [class*=' #{$fa-css-prefix}-'],
       span {
-        color: darken(theme-color("danger"), 5%);
+        background-color: darken(theme-color("danger"), 5%);
+        color: rgba(255, 255, 255, 0.90);
       }
 
       &:hover,
@@ -127,11 +125,11 @@ joomla-toolbar-button {
         [class^='#{$fa-css-prefix}-'],
         [class*=' #{$fa-css-prefix}-'],
         span {
-          color: rgba(255, 255, 255, .90);
           background-color: darken(theme-color("danger"), 10%);
+          color: rgba(255, 255, 255, 0.90);
         }
 
-        color: rgba(255, 255, 255, .90);
+        color:rgba(255, 255, 255, 0.90);
         background-color: theme-color("danger");
       }
     }
@@ -139,46 +137,49 @@ joomla-toolbar-button {
     &.btn-primary {
 
       background-color: $white;
-      border-radius: $border-radius;
 
       [class^='icon-'],
       [class*=' icon-'],
       [class^='#{$fa-css-prefix}-'],
       [class*=' #{$fa-css-prefix}-'],
       span {
-        color: darken(theme-color("info"), 5%);
+        background-color: var(--atum-bg-dark-70);
+        color: rgba(255, 255, 255, 0.90);
       }
 
       &:hover,
       &:active,
       &:focus {
-        color: rgba(255, 255, 255, .90);
-        background-color: theme-color("info");
 
         [class^='icon-'],
         [class*=' icon-'],
         [class^='#{$fa-css-prefix}-'],
         [class*=' #{$fa-css-prefix}-'],
         span {
-          color: rgba(255, 255, 255, .90);
-          background: darken(theme-color("info"), 10%);
+          background-color: var(--atum-bg-dark-80);
+          color: rgba(255, 255, 255, 0.90);
         }
+
+        color:rgba(255, 255, 255, 0.90);
+        background-color: var(--atum-bg-dark);
       }
     }
 
     &.btn-secondary {
 
-      [class^='icon-download'] {
-        color: rgba(255, 255, 255, .90);
-        background-color: var(--atum-link-color);
+      [class^='icon-download'],
+      [class^='fa-download'] {
+        background-color: var(--atum-bg-dark-70);
+        color: rgba(255, 255, 255, 0.90);
       }
 
       &:hover,
       &:active,
       &:focus {
-        [class^='icon-download'] {
-          color: rgba(255, 255, 255, .90);
-          background-color: var(--atum-link-color);
+        [class^='icon-download'],
+        [class^='fa-download'] {
+          background-color: var(--atum-bg-dark-80);
+          color: rgba(255, 255, 255, 0.90);
         }
       }
     }
@@ -186,30 +187,31 @@ joomla-toolbar-button {
     &.btn-info {
 
       background-color: $white;
-      border-radius: $border-radius;
 
       [class^='icon-'],
       [class*=' icon-'],
       [class^='#{$fa-css-prefix}-'],
       [class*=' #{$fa-css-prefix}-'],
       span {
-        color: darken(theme-color("info"), 5%);
+        background-color: var(--atum-bg-dark-70);
+        color: rgba(255, 255, 255, 0.90);
       }
 
       &:hover,
       &:active,
       &:focus {
-        color: rgba(255, 255, 255, .90);
-        background-color: lighten(theme-color("info"), 10%);
 
         [class^='icon-'],
         [class*=' icon-'],
         [class^='#{$fa-css-prefix}-'],
         [class*=' #{$fa-css-prefix}-'],
         span {
-          color: rgba(255, 255, 255, .90);
-          background: lighten(theme-color("info"), 5%);
+          background-color: var(--atum-bg-dark-80);
+          color: rgba(255, 255, 255, 0.90);
         }
+
+        color:rgba(255, 255, 255, 0.90);
+        background-color: var(--atum-bg-dark);
       }
     }
 
@@ -222,8 +224,8 @@ joomla-toolbar-button {
       [class^='#{$fa-css-prefix}-'],
       [class*=' #{$fa-css-prefix}-'],
       span {
-        color: rgba(255, 255, 255, .90);
         background-color: var(--atum-bg-dark-70);
+        color: rgba(255, 255, 255, 0.90);
       }
 
       &:hover,
@@ -235,19 +237,19 @@ joomla-toolbar-button {
         [class^='#{$fa-css-prefix}-'],
         [class*=' #{$fa-css-prefix}-'],
         span {
-          color: rgba(255, 255, 255, .90);
           background-color: var(--atum-bg-dark-80);
+          color: rgba(255, 255, 255, 0.90);
         }
 
-        color: rgba(255, 255, 255, .90);
+        color:rgba(255, 255, 255, 0.90);
         background-color: var(--atum-bg-dark);
       }
     }
 
     &[disabled],
     &.dropdown-toggle[disabled] {
-      background-color: rgba($gray-300, .8);
-      border-color: rgba($gray-500, .8);
+      background-color: rgba($gray-300, 0.8);
+      border-color: rgba($gray-500, 0.8);
 
       [class^='icon-'],
       [class*=' icon-'],
@@ -255,8 +257,8 @@ joomla-toolbar-button {
       [class*=' #{$fa-css-prefix}-'],
       span {
         color: var(--atum-text-dark);
-        background-color: rgba($gray-500, .8);
-         }
+        background-color: rgba($gray-500, 0.8);
+      }
 
       &:hover,
       &:active,
@@ -268,12 +270,12 @@ joomla-toolbar-button {
         [class*=' #{$fa-css-prefix}-'],
         span {
           color: var(--atum-text-dark);
-          background-color: rgba($gray-500, .8);
+          background-color: rgba($gray-500, 0.8);
         }
 
-        color: var(--atum-text-dark);
+        background-color: rgba($gray-300, 0.8);
         cursor: not-allowed;
-        background-color: rgba($gray-300, .8);
+        color: var(--atum-text-dark);
       }
 
     }
@@ -298,38 +300,33 @@ joomla-toolbar-button {
       color: var(--atum-text-dark);
 
       span {
-        color: rgba(255, 255, 255, .90);
         background-color: var(--atum-bg-dark);
+        color: rgba(255, 255, 255, 0.90);
       }
     }
 
     &.btn-primary {
       span {
-        color: rgba(255, 255, 255, .90);
         background-color: var(--atum-bg-dark);
+        color: rgba(255, 255, 255, 0.90);
       }
     }
 
     &.btn-success {
-      padding: 0;
       background-color: $white;
+      padding: 0;
 
       span {
-        color: rgba(255, 255, 255, .90);
         background-color: theme-color("success");
+        color: rgba(255, 255, 255, 0.90);
       }
 
       &::after {
-        width: 2.375rem;
-        margin-top: -1px;
-        font-family: "Font Awesome 5 Free";
-        line-height: 2.5rem;
-        color: rgba(255, 255, 255, .90);
+        border: 1px solid var(--border);
+        content: '\f078';
+        font-family: 'Font Awesome 5 Free';
         vertical-align: middle;
-        content: "\f078";
-        background-color: theme-color("success");
-        border: 0;
-        border-radius: 0 $border-radius $border-radius 0;
+        width: 2.375rem;
       }
     }
 
@@ -348,8 +345,8 @@ joomla-toolbar-button {
       [class*=' icon-'],
       [class^='#{$fa-css-prefix}-'],
       [class*=' #{$fa-css-prefix}-'] {
-        color: rgba(255, 255, 255, .90);
         background-color: var(--atum-bg-dark);
+        color: rgba(255, 255, 255, 0.90);
       }
 
       &:hover:not([disabled]) {
@@ -357,15 +354,19 @@ joomla-toolbar-button {
       }
 
       &::after {
-        width: 2.375rem;
+        border: none;
+        content: '\f078';
+        font-family: 'Font Awesome 5 Free';
         height: 100%;
         margin: $input-btn-padding-y-sm-submenu -#{$input-btn-padding-x-sm-submenu} $input-btn-padding-y-sm-submenu $input-btn-submenu-icon-distance;
-        font-family: "Font Awesome 5 Free";
-        line-height: 2.375rem;
         vertical-align: 0;
-        content: "\f078";
-        border: 0;
+        width: 2.375rem;
+        line-height: 2.375rem;
       }
+    }
+
+    &::after {
+      line-height: 2.4rem;
     }
   }
 }
@@ -375,14 +376,14 @@ joomla-toolbar-button {
   > joomla-toolbar-button,
   > .btn-group {
     @include media-breakpoint-down(lg) {
-      margin-right: .75rem;
-      margin-bottom: .75rem;
       margin-left: 0 !important;
+      margin-right: 0.75rem;
+      margin-bottom: 0.75rem;
 
       @include media-breakpoint-down(sm) {
         [dir=rtl] & {
+          margin-left: 0.75rem !important;
           margin-right: 0 !important;
-          margin-left: .75rem !important;
         }
       }
     }
@@ -471,8 +472,8 @@ joomla-toolbar-button {
 
     .toggler-toolbar-icon::before {
       font: normal normal normal 30px/1 'Font Awesome 5 Free';
-      color: var(--toggle-color);
       content: "\f00d";
+      color: var(--toggle-color);
     }
 
     &.collapsed .toggler-toolbar-icon::before {
