--- a/templates/cassiopeia/scss/blocks/_icons.scss
+++ b/templates/cassiopeia/scss/blocks/_icons.scss
@@ -12,7 +12,8 @@
   color: $white-offset;
 }
 
-.icon-publish {
+.icon-publish,
+.fa-check {
   color: theme-color("success");
 
   .dropdown-status-group & {
