--- a/administrator/templates/atum/scss/blocks/_icons.scss
+++ b/administrator/templates/atum/scss/blocks/_icons.scss
@@ -55,7 +55,7 @@
   }
 
   .icon-featured,
-  .fas.fa-star {
+  .fas.fa-star.featured {
     color: var(--atum-special-color);
     border-color: var(--atum-special-color);
   }
