--- a/administrator/templates/atum/scss/_variables.scss
+++ b/administrator/templates/atum/scss/_variables.scss
@@ -93,8 +93,7 @@ $alert-color-level:                0;
 
 // Global
 $atum-box-shadow:                  0 2px 4px rgba(0, 0, 0, .16), 0 2px 4px rgba(0, 0, 0, .23);
-$enable-rounded:                   false;
-$border-radius:                    3px;
+$enable-rounded:                   true;
 $input-box-shadow:                 inset 0 0 0 .1rem lighten(theme-color("atum-link-color"), 45%);
 $input-btn-padding-y:              .6rem;
 $input-btn-padding-x:              1rem;
