--- a/administrator/templates/atum/scss/system/searchtools/searchtools.scss
+++ b/administrator/templates/atum/scss/system/searchtools/searchtools.scss
@@ -272,6 +272,22 @@
 
     .js-stools-field-list {
       margin-bottom: 0;
+
+      [dir=ltr] & {
+        margin-right: .25rem;
+
+        &:last-child {
+          margin-right: 0;
+        }
+      }
+
+      [dir=rtl] & {
+        margin-left: .25rem;
+
+        &:last-child {
+          margin-left: 0;
+        }
+      }
     }
 
     .input-append {
