--- a/administrator/templates/atum/scss/_variables.scss
+++ b/administrator/templates/atum/scss/_variables.scss
@@ -4,14 +4,14 @@
 $white:                            #fff;
 $whiteoffset:                      #fefefe;
 $gray-100:                         #f8f9fa;
-$gray-200:                         #e8e8e8; //used in bootstrap .badge-inverse
+$gray-200:                         #e8e8e8;
 $gray-300:                         #dee2e6; //used for toolbar and badges
 $gray-400:                         #cdcdcd; //used for border-bottom sidebar-nav and toolbar normal border
 $gray-500:                         #adb5bd; //used in toolbar and buttons for border
 //$gray-600:                         #6f7780; //used for atum-text-dark and $secondary
 $gray-700:                         #495057; //used for atum-text-dark, secondary
-$gray-800:                         #343a40; //used for badges-inverse
-$gray-900:                         #212529; //used for tree header, badge-inverse border
+$gray-800:                         #343a40;
+$gray-900:                         #212529; //used for tree header
 $bluegray:                         #b2bfcd; // used for borders
 $black:                            #000;    //used for shadows
 $focuscolor:                       #39f;    //used for focus color
@@ -188,6 +188,10 @@ $state-error-bg:                   lighten($red-dark, 70%);
 $state-error-border:               lighten($red-dark, 30%);
 
 // Badges
+$badge-padding-x:                  .3rem;
+$badge-padding-y:                  .1rem;
+$badge-border-radius:              .2rem;
+
 $success-bg:                       $green;
 $success-txt:                      $white;
 
