[4.0] Sidebar dashboard & new (#28219)

--- a/administrator/templates/atum/scss/blocks/_sidebar.scss
+++ b/administrator/templates/atum/scss/blocks/_sidebar.scss
@@ -152,10 +152,11 @@
         &.mm-active {
 
           // invert colors
-          color: var(--atum-sidebar-link-color);
+          color: var(--atum-link-color);
           background-color: var(--atum-sidebar-bg);
           .fas {
-            color: var(--atum-contrast);
+            color: var(--atum-sidebar-bg);
+            background-color: var(--atum-link-color);
           }
         }
       }
