Missing field classes (#28274)
Replaces outdated addfieldpath uses with addfieldprefix, fixing class loading in some forms.
Also removes unneeded addfieldpath uses.

--- a/components/com_fields/forms/filter_fields.xml
+++ b/components/com_fields/forms/filter_fields.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <form>
-	<fieldset name="group"
-		addfieldpath="/administrator/components/com_fields/models/fields">
+	<fieldset
+		name="group"
+		addfieldprefix="Joomla\Component\Fields\Administrator\Field"
+		>
 		<field
 			name="context"
 			type="fieldcontexts"
