[4.0] Fix Module XTD position and type filters by adding client property to these fields (#28259)

--- a/administrator/components/com_modules/forms/filter_modules.xml
+++ b/administrator/components/com_modules/forms/filter_modules.xml
@@ -33,6 +33,7 @@
 			name="position"
 			type="ModulesPosition"
 			label="COM_MODULES_OPTION_SELECT_POSITION"
+			client="site"
 			onchange="this.form.submit();"
 			>
 			<option value="">COM_MODULES_OPTION_SELECT_POSITION</option>
@@ -41,6 +42,7 @@
 			name="module"
 			type="ModulesModule"
 			label="COM_MODULES_OPTION_SELECT_MODULE"
+			client="site"
 			onchange="this.form.submit();"
 			>
 			<option value="">COM_MODULES_OPTION_SELECT_MODULE</option>
