--- a/templates/cassiopeia/scss/_variables.scss
+++ b/templates/cassiopeia/scss/_variables.scss
@@ -137,6 +137,18 @@ $list-group-bg:                      $white-offset;
 // Custom form
 $custom-select-bg:                   $white-offset;
 
+// Custom form
+$custom-select-indicator-padding:    3rem;
+$custom-select-bg-size:              116rem;
+$custom-select-indicator:            url(../images/select-bg.svg);
+$custom-select-indicator-rtl:        url(../images/select-bg-rtl.svg);
+$custom-select-indicator-active:     url(../../../images/select-bg.svg);
+$custom-select-indicator-active-rtl: url(../../../images/select-bg-rtl.svg);
+$custom-select-background:           $custom-select-indicator no-repeat right center / $custom-select-bg-size; // Used so we can have multiple background elements (e.g., arrow and feedback icon)
+$custom-select-background-rtl:       $custom-select-indicator-rtl no-repeat left center / $custom-select-bg-size; // Used so we can have multiple background elements (e.g., arrow and feedback icon)
+$custom-select-bg-size-sm:           75rem;
+$custom-select-multiple-padding-y:   .3rem;
+
 // Modals
 $modal-header-height:                46px;
 
@@ -146,3 +158,18 @@ $badge-default-bg:                   #5e7082;
 // Gutter
 $grid-gutter-width:                  15px !default;
 $cassiopeia-grid-gutter:             $grid-gutter-width;
+
+// Z-Index list
+$zindex-negative:                  -1;
+$zindex-actions:                   auto;
+$zindex-toolbar:                   1000;
+$zindex-sidebar:                   1010;
+$zindex-header:                    1020;
+$zindex-alerts:                    1030;
+$zindex-modal-backdrop:            1040;
+$zindex-modal:                     1050;
+$zindex-popover:                   1060;
+$zindex-tooltip:                   1070;
+$zindex-mobile-bottom:             8000;
+$zindex-mobile-toggle:             9999;
+$zindex-mobile-menu:               9000;
