--- a/administrator/components/com_finder/forms/filter_filters.xml
+++ b/administrator/components/com_finder/forms/filter_filters.xml
@@ -14,7 +14,7 @@
 			name="state"
 			type="status"
 			label="JOPTION_SELECT_PUBLISHED"
-			filter="0,1"
+			optionsFilter="0,1"
 			onchange="this.form.submit();"
 			>
 			<option value="">JOPTION_SELECT_PUBLISHED</option>
