--- a/administrator/components/com_finder/forms/filter_maps.xml
+++ b/administrator/components/com_finder/forms/filter_maps.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<form>
+<form addfieldprefix="Joomla\Component\Finder\Administrator\Field">
 	<fields name="filter">
 		<field
 			name="search"
@@ -13,9 +13,8 @@
 		<field
 			name="state"
 			type="status"
-			label="COM_FINDER_FILTER_PUBLISHED"
-			description="COM_FINDER_FILTER_PUBLISHED_DESC"
-			filter="0,1"
+			label="JOPTION_SELECT_PUBLISHED"
+			optionsFilter="0,1"
 			onchange="this.form.submit();"
 			>
 			<option value="">JOPTION_SELECT_PUBLISHED</option>
@@ -24,6 +23,7 @@
 		<field
 			name="branch"
 			type="branches"
+			label="COM_FINDER_MAPS_SELECT_BRANCH"
 			default="0"
 			onchange="this.form.submit();"
 		/>
@@ -31,8 +31,7 @@
 		<field
 			name="level"
 			type="integer"
-			label="JOPTION_FILTER_LEVEL"
-			description="JOPTION_FILTER_LEVEL_DESC"
+			label="JOPTION_SELECT_MAX_LEVELS"
 			first="1"
 			last="2"
 			step="1"
@@ -47,21 +46,22 @@
 		<field
 			name="fullordering"
 			type="list"
+			label="JGLOBAL_SORT_BY"
 			onchange="this.form.submit();"
-			default="d.branch_title ASC"
+			default="branch_title ASC"
 			validate="options"
 			>
 			<option value="">JGLOBAL_SORT_BY</option>
-			<option value="d.branch_title ASC">JGLOBAL_TITLE_ASC</option>
-			<option value="d.branch_title DESC">JGLOBAL_TITLE_DESC</option>
 			<option value="a.state ASC">JSTATUS_ASC</option>
 			<option value="a.state DESC">JSTATUS_DESC</option>
+			<option value="branch_title ASC">JGLOBAL_TITLE_ASC</option>
+			<option value="branch_title DESC">JGLOBAL_TITLE_DESC</option>
 		</field>
 
 		<field
 			name="limit"
 			type="limitbox"
-			class="input-mini"
+			label="JGLOBAL_LIST_LIMIT"
 			default="25"
 			onchange="this.form.submit();"
 		/>
