--- a/administrator/components/com_languages/forms/filter_languages.xml
+++ b/administrator/components/com_languages/forms/filter_languages.xml
@@ -13,7 +13,7 @@
 			name="published"
 			type="status"
 			label="JOPTION_SELECT_PUBLISHED"
-			filter="1,0,-2,*"
+			optionsFilter="1,0,-2,*"
 			onchange="this.form.submit();"
 			>
 			<option value="">JOPTION_SELECT_PUBLISHED</option>
