--- a/administrator/components/com_menus/forms/filter_items.xml
+++ b/administrator/components/com_menus/forms/filter_items.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<form>
+<form addfieldprefix="Joomla\Component\Menus\Administrator\Field">
 	<field
 		name="client_id"
 		type="list"
-		label=""
+		label="JSITEADMIN"
 		filtermode="selector"
-		onchange="this.form.submit();"
+		onchange="Joomla.resetFilters(this)"
 		>
 		<option value="0">JSITE</option>
 		<option value="1">JADMINISTRATOR</option>
@@ -13,8 +13,7 @@
 	<field
 		name="menutype"
 		type="menu"
-		label="COM_MENUS_FILTER_CATEGORY"
-		description="JOPTION_FILTER_CATEGORY_DESC"
+		label="COM_MENUS_SELECT_MENU_FILTER"
 		accesstype="manage"
 		clientid=""
 		showAll="false"
@@ -28,17 +27,14 @@
 			name="search"
 			type="text"
 			inputmode="search"
-			label="COM_MENUS_ITEMS_SEARCH_FILTER_LABEL"
-			description="COM_MENUS_ITEMS_SEARCH_FILTER"
 			hint="JSEARCH_FILTER"
 			noresults="JGLOBAL_NO_MATCHING_RESULTS"
 		/>
 		<field
 			name="published"
 			type="status"
-			label="COM_MENUS_FILTER_PUBLISHED"
-			description="COM_MENUS_FILTER_PUBLISHED_DESC"
-			filter="*,0,1,-2"
+			label="JOPTION_SELECT_PUBLISHED"
+			optionsFilter="*,0,1,-2"
 			onchange="this.form.submit();"
 			>
 			<option value="">JOPTION_SELECT_PUBLISHED</option>
@@ -46,8 +42,7 @@
 		<field
 			name="access"
 			type="accesslevel"
-			label="JOPTION_FILTER_ACCESS"
-			description="JOPTION_FILTER_ACCESS_DESC"
+			label="JOPTION_SELECT_ACCESS"
 			onchange="this.form.submit();"
 			>
 			<option value="">JOPTION_SELECT_ACCESS</option>
@@ -55,8 +50,7 @@
 		<field
 			name="language"
 			type="contentlanguage"
-			label="JOPTION_FILTER_LANGUAGE"
-			description="JOPTION_FILTER_LANGUAGE_DESC"
+			label="JOPTION_SELECT_LANGUAGE"
 			onchange="this.form.submit();"
 			>
 			<option value="">JOPTION_SELECT_LANGUAGE</option>
@@ -65,8 +59,7 @@
 		<field
 			name="level"
 			type="integer"
-			label="JOPTION_FILTER_LEVEL"
-			description="JOPTION_FILTER_LEVEL_DESC"
+			label="JOPTION_SELECT_MAX_LEVELS"
 			first="1"
 			last="10"
 			step="1"
@@ -77,9 +70,8 @@
 		</field>
 		<field
 			name="parent_id"
-			type="menuitembytype"
+			type="MenuItemByType"
 			label="COM_MENUS_FILTER_PARENT_MENU_ITEM_LABEL"
-			description="COM_MENUS_FILTER_PARENT_MENU_ITEM_DESC"
 			onchange="this.form.submit();"
 			>
 			<option value="">COM_MENUS_FILTER_SELECT_PARENT_MENU_ITEM</option>
@@ -90,7 +82,6 @@
 			name="fullordering"
 			type="list"
 			label="JGLOBAL_SORT_BY"
-			description="JGLOBAL_SORT_BY"
 			statuses="*,0,1,2,-2"
 			onchange="this.form.submit();"
 			default="a.lft ASC"
@@ -111,17 +102,15 @@
 			<option value="a.access DESC">JGRID_HEADING_ACCESS_DESC</option>
 			<option value="association ASC" requires="associations">JASSOCIATIONS_ASC</option>
 			<option value="association DESC" requires="associations">JASSOCIATIONS_DESC</option>
-			<option value="language ASC">JGRID_HEADING_LANGUAGE_ASC</option>
-			<option value="language DESC">JGRID_HEADING_LANGUAGE_DESC</option>
+			<option value="language ASC" requires="multilanguage">JGRID_HEADING_LANGUAGE_ASC</option>
+			<option value="language DESC" requires="multilanguage">JGRID_HEADING_LANGUAGE_DESC</option>
 			<option value="a.id ASC">JGRID_HEADING_ID_ASC</option>
 			<option value="a.id DESC">JGRID_HEADING_ID_DESC</option>
 		</field>
 		<field
 			name="limit"
 			type="limitbox"
-			label="COM_MENUS_LIST_LIMIT"
-			description="COM_MENUS_LIST_LIMIT_DESC"
-			class="input-mini"
+			label="JGLOBAL_LIST_LIMIT"
 			default="25"
 			onchange="this.form.submit();"
 		/>
