[4.0] Cassiopea: fixing XTD display plus more RTL (#28299)

--- a/templates/cassiopeia/scss/blocks/_form.scss
+++ b/templates/cassiopeia/scss/blocks/_form.scss
@@ -30,6 +30,12 @@
   width: auto;
 }
 
+@include media-breakpoint-down(sm) {
+  .form-inline .custom-select {
+    width: 100%;
+  }
+}
+
 td .form-control {
   display: inline-block;
   width: auto;
