--- a/templates/cassiopeia/scss/_variables.scss
+++ b/templates/cassiopeia/scss/_variables.scss
@@ -9,7 +9,7 @@ $cassiopeia-box-shadow:              0 0 3px rgba(0,0,0,.04) !default;
 $cassiopeia-block-header-bg:         #f5f5f5 !default;
 $white-offset:                       #fefefe;
 $cassiopeia-header-grad:             linear-gradient(135deg, $cassiopeia-template-color-dark 0%, $cassiopeia-template-color 100%);
-$input-max-width:                    240px;
+$input-max-width:                    100%;
 
 $white:                              #fff;
 $gray-100:                           #f8f9fa;
@@ -148,6 +148,12 @@ $custom-select-background:           $custom-select-indicator no-repeat right ce
 $custom-select-background-rtl:       $custom-select-indicator-rtl no-repeat left center / $custom-select-bg-size; // Used so we can have multiple background elements (e.g., arrow and feedback icon)
 $custom-select-bg-size-sm:           75rem;
 $custom-select-multiple-padding-y:   .3rem;
+
+//input
+$input-padding:                    .6rem 1rem;
+$input-border:                     solid 1px  #6d7784;
+$input-btn-padding-y:              .6rem;
+$input-btn-padding-x:              1rem;
 
 // Modals
 $modal-header-height:                46px;
