--- a/templates/cassiopeia/scss/system/searchtools/searchtools.scss
+++ b/templates/cassiopeia/scss/system/searchtools/searchtools.scss
@@ -36,7 +36,7 @@
   position: relative;
   width: 100%;
   padding: .25rem 0 0;
-  margin: 1rem 0 .5rem;
+  margin: 1rem .5rem .5rem;
 
   > div {
     margin-bottom: 1rem;
