--- a/administrator/templates/atum/scss/blocks/_sidebar.scss
+++ b/administrator/templates/atum/scss/blocks/_sidebar.scss
@@ -125,6 +125,11 @@
       &:hover {
         border-bottom: solid 1px var(--atum-bg-light);
       }
+
+      span.fas {
+        transform: scale(1.3);
+      }
+
     }
 
     .menu-dashboard,
@@ -181,7 +186,6 @@
 
   span.fas {
     padding: .9rem 0;
-    transform: scale(1.3);
   }
 
   .sidebar-item-title {
