[4.0] Media edit fields alignment (#28373)

--- a/administrator/components/com_media/resources/styles/components/_media-edit.scss
+++ b/administrator/components/com_media/resources/styles/components/_media-edit.scss
@@ -3,7 +3,7 @@
     max-width: 100%;
   }
   .control-group {
-    display: flex;
+    display: inline-flex;
     flex-direction: column;
     .control-label {
       width: 100%;
