Remove condition from com_content (#54)
* Remove condition from workflow component

* Load Workflow plugins on transition generation

* Remove condition from com_content

--- a/administrator/components/com_content/forms/filter_featured.xml
+++ b/administrator/components/com_content/forms/filter_featured.xml
@@ -22,13 +22,13 @@
 		</field>
 
 		<field
-			name="condition"
-			type="workflowcondition"
-			label="JOPTION_SELECT_CONDITION"
+			name="published"
+			type="status"
+			label="JOPTION_SELECT_PUBLISHED"
 			onchange="this.form.submit();"
 			extension="com_content"
 			>
-			<option value="">JOPTION_SELECT_CONDITION</option>
+			<option value="">JOPTION_SELECT_PUBLISHED</option>
 		</field>
 
 		<field
