[4.0] Seo note heading (#28453)

--- a/administrator/components/com_config/forms/application.xml
+++ b/administrator/components/com_config/forms/application.xml
@@ -708,6 +708,8 @@
 			name="sef_note"
 			type="note"
 			label="COM_CONFIG_FIELD_SEF_REWRITE_DESC"
+			heading="p"
+			class="small"
 			showon="sef:1[AND]sef_rewrite:1"
 		/>
 
