--- a/administrator/templates/atum/scss/blocks/_sidebar-nav.scss
+++ b/administrator/templates/atum/scss/blocks/_sidebar-nav.scss
@@ -53,5 +53,16 @@
 
       }
     }
+
+    &:hover, &.active {
+      a {
+        color: var(--atum-text-light);
+        background-color: var(--atum-link-color);
+
+        &::before {
+          border-color: var(--atum-text-light);
+        }
+      }
+    }
   }
 }
