--- a/administrator/components/com_finder/forms/filter.xml
+++ b/administrator/components/com_finder/forms/filter.xml
@@ -24,6 +24,7 @@
 			name="alias"
 			type="text"
 			label="JFIELD_ALIAS_LABEL"
+			description="JFIELD_ALIAS_DESC"
 			hint="JFIELD_ALIAS_PLACEHOLDER"
 			size="45"
 		/>
