--- a/components/com_content/forms/article.xml
+++ b/components/com_content/forms/article.xml
@@ -38,6 +38,7 @@
 			name="alias"
 			type="text"
 			label="JFIELD_ALIAS_LABEL"
+			description="JFIELD_ALIAS_DESC"
 			id="alias"
 			hint="JFIELD_ALIAS_PLACEHOLDER"
 			size="45"
