--- a/installation/template/scss/template.scss
+++ b/installation/template/scss/template.scss
@@ -249,7 +249,7 @@ caption {
 
 // footer
 .footer {
-  position: absolute;
+  position: fixed;
   bottom: 0;
   left: 0;
   z-index: $zindex-header;
